--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
       font-src 'self';
     ">
     <title>Lexa</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.css" />
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <p id="project-path">No project opened</p>
