add side and status bars

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,22 @@
       font-src 'self';
     ">
     <title>Lexa</title>
-    <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <p id="project-path">No project opened</p>
+    <nav class="sidebar">
+
+    </nav>
+
+    <div class="main">
+      <p id="project-path">No project opened</p>
+    </div>
+
+    <div class="statusbar">
+
+    </div>
+
   </body>
   <script src="renderer.js"></script>
 </html>
