add icons in sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,14 @@
     <title>Lexa</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
   </head>
   <body>
     <nav class="sidebar">
-
+      <div class="nav-item"><i class="fas tab fa-database"></i></div>
+      <div class="nav-item"><i class="fas fa-language"></i></div>
+      <div class="nav-item"><i class="fas fa-book"></i></div>
+      <div class="nav-item"><i class="fas tab fa-gear"></i></div>
     </nav>
 
     <div class="main">
