add box for main

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,10 @@
       <div class="nav-item"><i class="fas tab fa-gear"></i></div>
     </nav>
 
-    <div class="main">
-      <p id="project-path">No project opened</p>
+    <div class="main-wrapper">
+      <div class="main">
+        <p id="project-path">No project opened</p>
+      </div>
     </div>
 
     <div class="statusbar">
