--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       font-src 'self';
     ">
     <title>Lexa</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
   </head>
