add basic validation

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <div class="main-wrapper">
       <div class="main">
         <p id="project-path">No project opened</p>
+        <p id="project-validation"></p>
       </div>
     </div>
 
