--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 
     <div class="main-wrapper">
       <div class="main">
-        <p id="project-path">No project opened</p>
-        <p id="project-validation"></p>
+        <p id="lexadb-path">No Lexa database opened</p>
+        <p id="lexadb-validation"></p>
       </div>
     </div>
 
