--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,14 @@
 
     <div class="main-wrapper">
       <div class="main">
-        <p id="lexadb-path">No Lexa database opened</p>
         <p id="lexadb-validation"></p>
       </div>
     </div>
 
-    <div class="statusbar">
+    <div class="corner"></div>
 
+    <div class="statusbar">
+      <p><i class="fas fa-database"></i> <span id="lexadb-path">No Lexa database opened</span></p>
     </div>
 
   </body>
