colour db icon by validation in statusbar

--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,14 @@
 
     <div class="main-wrapper">
       <div class="main">
-        <p id="lexadb-validation"></p>
+
       </div>
     </div>
 
     <div class="corner"></div>
 
     <div class="statusbar">
-      <p><i class="fas fa-database"></i> <span id="lexadb-path">No Lexa database opened</span></p>
+      <p><i id="lexadb-validation" class="fas fa-database"></i> <span id="lexadb-path">No Lexa database opened</span></p>
     </div>
 
   </body>
