use BEM style css

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
   </head>
   <body>
     <nav class="sidebar">
-      <div class="nav-item"><i class="fas tab fa-database"></i></div>
-      <div class="nav-item"><i class="fas fa-language"></i></div>
-      <div class="nav-item"><i class="fas fa-book"></i></div>
-      <div class="nav-item"><i class="fas tab fa-gear"></i></div>
+      <div class="sidebar__nav-item"><i class="sidebar__icon--active fas  fa-database"></i></div>
+      <div class="sidebar__nav-item"><i class="sidebar__icon fas fa-language"></i></div>
+      <div class="sidebar__nav-item"><i class="sidebar__icon fas fa-book"></i></div>
+      <div class="sidebar__nav-item"><i class="sidebar__icon--active fas fa-gear"></i></div>
     </nav>
 
     <div class="main-wrapper">
