order properties alphabetically

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <div class="corner"></div>
 
     <div class="statusbar">
-      <p><i id="lexadb-validation" class="fas fa-database"></i> <span id="lexadb-path">No Lexa database opened</span></p>
+      <p><i id="lexadb-validation" class="fas fa-database"></i> <span id="lexadb-path" class="statusbar__dbpath">No Lexa database opened</span></p>
     </div>
 
   </body>
