--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
 
     <div class="main-wrapper">
       <div class="main">
-        <h1 id="lexadb-name"></h1>
+      <div class="main__titlebar"><h1 class="main__h1">Overview</h1></div>
+        <p id="lexadb-name"></p>
       </div>
     </div>
 
