redesign main view

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,15 @@
       <div class="sidebar__nav-item"><i class="sidebar__icon--active fas fa-gear"></i></div>
     </nav>
 
-    <div class="main-wrapper">
-      <div class="main">
+    <div class="main">
       <div class="main__titlebar"><h1 class="main__h1">Overview</h1></div>
-        <p id="lexadb-name"></p>
+      <div class="container-main">
+        <div class="sheet">
+          <div class="onsheet">
+            <h6>DATABASE</h6>
+          </div>
+          <p id="lexadb-name"></p>
+        </div>
       </div>
     </div>
 
