add databse table

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,17 @@
         <div class="sheet">
           <div class="onsheet">
             <h6>DATABASE</h6>
+            <table>
+              <tr>
+                <td><span class="badge rounded-pill text-bg-gray-3">Name</span></td>
+                <td><span id="lexadb-name"></span></td>
+              </tr>
+              <tr>
+                <td><span class="badge rounded-pill text-bg-gray-3">Author</span></td>
+                <td><span id="lexadb-author"></span></td>
+              </tr>
+            </table>
           </div>
-          <p id="lexadb-name"></p>
         </div>
       </div>
     </div>
