update overview headings

--- a/src/index.html
+++ b/src/index.html
@@ -30,19 +30,21 @@
       <div class="main__titlebar"><h1 class="main__h1">Overview</h1></div>
       <div class="container-main">
         <div class="sheet">
-          <div class="onsheet">
-            <h6>DATABASE</h6>
-            <table>
-              <tr>
-                <td><span class="badge rounded-pill text-bg-gray-3">Name</span></td>
-                <td><span id="lexadb-name"></span></td>
-              </tr>
-              <tr>
-                <td><span class="badge rounded-pill text-bg-gray-3">Author</span></td>
-                <td><span id="lexadb-author"></span></td>
-              </tr>
-            </table>
-          </div>
+          <h6 class="sheet__h6"><span class="sheet__h6__span">DATABASE</span></h6>
+          <table>
+            <tr>
+              <td><span class="badge rounded-pill text-bg-gray-3">Name</span></td>
+              <td><span id="lexadb-name"></span></td>
+            </tr>
+            <tr>
+              <td><span class="badge rounded-pill text-bg-gray-3">Author</span></td>
+              <td><span id="lexadb-author"></span></td>
+            </tr>
+          </table>
+
+          <h6 class="sheet__h6"><span class="sheet__h6__span">LEXICON</span></h6>
+
+          <h6 class="sheet__h6"><span class="sheet__h6__span">COLLECTIONS</span></h6>
         </div>
       </div>
     </div>
